@@ -1,5 +1,10 @@
 2016-02-20  Ben Elliston  <bje@gnu.org>
 
+	* lib/utils.exp: Improve comments.
+	* NEWS: Update.
+
+2016-02-20  Ben Elliston  <bje@gnu.org>
+
 	* lib/utils.exp (prune): Remove proc.
 	* doc/ref.xml: Update documentation.
 	* doc/dejagnu.texi: Regenerate.
